# amidiga

./: .gitignore  ANALYSIS_SUMMARY.txt  BUILD.md  BUILD_TEST_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CODEBASE_ANALYSIS.md  COMPILATION_FIXES.md  DEVELOPMENT_ROADMAP.md  LINT_TEST_ANALYSIS.md  MIGRATION_TO_LUAARDUINO.md  NATIVE_MACOS_IOS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REFACTORING_SESSION_2.md  REFACTORING_SUMMARY.md  SOLUTION_SUMMARY.md  TEENSY_BUILD_STATUS.md  TESTING_AND_WARNINGS.md  build.sh  check_deps.sh  patch_lua.py  platformio.ini
.claude/: README.md
.claude/commands/: add-mode.md  architecture-check.md  design-mode.md  explain-mode.md  memory-analysis.md
config/: desktop.ini  teensy41.ini
docs/: AUDIO_OUTPUT.md  CODE_REVIEW.md  IMMEDIATE_ACTIONS.md  LUA_API.md  LUA_EDITOR.md  LUA_MODE_GUIDE.md  REFACTORING_SUMMARY.md  SONG_FORMAT.md  TEENSY_BUILD_GUIDE.md  TEENSY_DEPLOYMENT_GUIDE.md  TEENSY_GUIDE.md
examples/: demo_song.grv
lib/lua/: DOWNLOAD_LUA_HERE.txt  README.md  library.json  luaconf.h
modes/: 00_boot.lua.old  00_song.lua  01_chords.lua  01_drums.lua  02_acid.lua  03_cellular.lua  03_chords.lua  04_arpeggiator.lua  05_euclidean.lua  06_random.lua  07_samplehold.lua  08_drunk.lua  09_cellular.lua  09_wavetable.lua  10_drums.lua  10_wavetable.lua  11_mangler.lua  12_lunar.lua  13_markov.lua  14_tornado.lua  99_led_test.lua  TEMPLATE.lua
native/: IMPLEMENTATION_SUMMARY.md  MACOS_BUILD_GUIDE.md  QUICKSTART.md  README.md
native-spm/: Package 2.swift  Package.swift  README.md  build-app.sh  create-icon.py  create-icon.sh
native-spm/Sources/GRUVBOK/: App.swift
native-spm/Sources/GRUVBOK/Bridge/: EngineState.swift  EngineWrapper.h  EngineWrapper.mm
native-spm/Sources/GRUVBOK/Hardware/: MacOSHardware.h  MacOSHardware.mm
native-spm/Sources/GRUVBOK/Views/: CodeEditorView.swift  ContentView.swift  GMInstruments.swift  HardwareControlsView.swift  KnobView.swift  LuaManagerView.swift  ModeLabels.swift  OutputView.swift  PatternGridView.swift  SongDataExplorerView.swift  SystemLogView.swift
native-spm/Sources/GRUVBOKCore/: src
native/GRUVBOK/: GRUVBOK-Bridging-Header.h
native/GRUVBOK/GRUVBOK/: ContentView.swift  GRUVBOKApp.swift  Item.swift
native/GRUVBOK/GRUVBOK.xcodeproj/: project.pbxproj
native/GRUVBOK/GRUVBOK.xcodeproj/project.xcworkspace/xcuserdata/ford.xcuserdatad/: UserInterfaceState.xcuserstate
native/GRUVBOK/GRUVBOK.xcodeproj/xcuserdata/ford.xcuserdatad/xcschemes/: xcschememanagement.plist
native/GRUVBOK/GRUVBOKTests/: GRUVBOKTests.swift
native/GRUVBOK/GRUVBOKUITests/: GRUVBOKUITests.swift  GRUVBOKUITestsLaunchTests.swift
native/GRUVBOK/Shared/Bridge/: EngineState.swift  EngineWrapper.h  EngineWrapper.mm
native/GRUVBOK/Shared/Views/: ContentView.swift  PatternGridView.swift
native/GRUVBOK/iOS/: GruvbokApp.swift  IOSHardware.h  IOSHardware.mm
native/GRUVBOK/macOS/: GruvbokApp.swift  MacOSHardware.h  MacOSHardware.mm
native/Hardware/: hardware
native/LuaBridge/: lua_bridge
native/Shared/Bridge/: EngineState.swift  EngineWrapper.h  EngineWrapper.mm
native/Shared/Resources/: modes
native/Shared/Views/: KnobView.swift
native/iOS/: IOSHardware.h
native/macOS/: GruvbokApp.swift  MacOSHardware.h  MacOSHardware.mm
scripts/: embed_lua.py  skip_size_check.py
src/core/: CMakeLists.txt  config.h  engine.cpp  engine.h  event.cpp  event.h  led_controller.cpp  led_controller.h  midi_clock_manager.cpp  midi_clock_manager.h  mode0_sequencer.cpp  mode0_sequencer.h  pattern.cpp  pattern.h  playback_state.cpp  playback_state.h  song.cpp  song.h
src/desktop/: CMakeLists.txt  Info.plist.in  desktop_hardware.cpp  desktop_hardware.h  gui_main.cpp  main.cpp
src/desktop/resources/: ICON_README.md  generate_icns.sh  gruvbok.icns
src/hardware/: CMakeLists.txt  audio_output.cpp  audio_output.h  config_parser.h  hardware_base.cpp  hardware_base.h  hardware_interface.h  hardware_utils.h  midi_scheduler.cpp  midi_scheduler.h
src/lua_bridge/: CMakeLists.txt  lua_api.cpp  lua_api.h  lua_context.cpp  lua_context.h  mode_loader.cpp  mode_loader.h
src/teensy/: README.md  main.cpp  syscalls_stubs.c  teensy_hardware.cpp  teensy_hardware.h
tests/: CMakeLists.txt  README.md  memory_profiler.cpp  test_engine.cpp  test_event.cpp  test_lua_integration.cpp  test_midi_clock_manager.cpp  test_midi_scheduler.cpp  test_mode0_sequencer.cpp  test_pattern.cpp  test_playback_state.cpp  test_song.cpp
